# RdM

./: .dockerignore  DEVELOPER_DOCUMENTATION.md  Dockerfile  MANUAL.md  README.md  RESUMO.md  pyproject.toml  render.yaml  run.py
.deps/pypdfium2-5.6.0.dist-info/: RECORD
app/: __init__.py  config.py
app/ai/: __init__.py  policy.py
app/domain/: __init__.py  models.py
app/engine/: __init__.py  game_engine.py
app/maptools/: __init__.py  calibration.py  graph.py  models.py  repository.py
app/services/: __init__.py  card_factory.py  data_loader.py  game_factory.py  save_store.py
app/static/css/: app.css
app/ui/: server.py
assets/cargo/: cargo_assets_manifest.json
data/: ai_v2_presets.json  ai_v2_rules.json  ai_v2_rules_original.json  board_edges.json  board_nodes.json  cards.json  continents.json  distances.json  game_ai_ui_v3_layout.json  game_v3_tutorial_v2.json  map_calibration.json  player_colors.json  port_coordinates.json  ports.json  region_distances.json  rules_v2.json  ship_types.json
docs/: AI_DOS_ROBOS.md  AI_REGRAS_V2.md  AI_REGRAS_V2_TABELAS.md  ANALISE_THRESHOLDS_CUPONS.md  CHANCE_CARDS_GUIDE.md  DEVELOPER_DOCUMENTATION.md  RENDER.md  ROTAS_E_TELAS.md
manual/: IA_ROBOS.xlsx  MANUAL - REI DOS MARES.docx
scripts/: build_board_geometry.py  prepare_accessory_assets.py
tests/: test_accessory_assets.py  test_board_geometry.py  test_board_graph.py  test_chance_cards.py  test_chance_engine.py  test_data_loader.py  test_engine_rules.py  test_game_factory.py  test_permission_cards.py  test_port_title_cards.py  test_save_store.py
(+114 files in other folders)
